re PR c++/10845 (template member function (getting a nested template as parameter) cannot be called anymore if another unrelated template member function is defined.)

PR c++/10845
	* pt.c (try_class_unification): Correct handling of member class
	templates.

	* semantics.c (genrtl_finish_function): Adjust
	expand_function_end call.

From-SVN: r68269